--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <center>
         <h1>Hello from Git + GitHub</h1>
         <p>This is a simple HTML document. Pushed using Git Commands.</p>
+        <p>This is a new paragraph added to the document.</p>
+        <p>Made by: BC</p>
     </center>
 </body>
 </html>
